clusters/production/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  labels:
    app: umami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          image: ghcr.io/umami-software/umami:3.0.3 # {"$imagepolicy": "flux-system:umami"}
