clusters/production/umami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`umami.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: umami
          port: 3000
  tls:
    secretName: umami-certificate-secret
